--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mariadb": "^2.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2"
   }
 }
